@@ -7,6 +7,8 @@
   * src/ggd-tag-utils.c:
     Use Geany's symbols_get_context_separator() and not a copied version since
     it is now exported to the plugin API since 185.
+  * src/ggd-widget-doctype-selector.c:
+    Add a popup menu.
 
 
 2010-06-12  Colomban Wendling  <ban(at)herbesfolles(dot)org>
